Updated index.html for AR view

--- a/Desktop/GLOW/ARr&d/index.html
+++ b/Desktop/GLOW/ARr&d/index.html
@@ -23,7 +23,9 @@
 <p class="p2">&lt;<span class="s2">html</span> <span class="s3">lang</span>=<span class="s4">"en"</span>&gt;</p>
 <p class="p2"><span class="Apple-converted-space">  </span>&lt;<span class="s2">head</span>&gt;</p>
 <p class="p2"><span class="Apple-converted-space">    </span>&lt;<span class="s2">meta</span> <span class="s3">charset</span>=<span class="s4">"UTF-8"</span> /&gt;</p>
-<p class="p2"><span class="Apple-converted-space">    </span>&lt;<span class="s2">title</span>&gt;AR View&lt;/<span class="s2">title</span>&gt;</p>
+<p class="p3"><span class="s5"><span class="Apple-converted-space">    </span>&lt;</span><span class="s2">meta</span><span class="s5"> </span><span class="s3">name</span><span class="s5">=</span>"viewport"<span class="s5"> </span><span class="s3">content</span><span class="s5">=</span>"width=device-width, initial-scale=1.0"<span class="s5">&gt;</span></p>
+<p class="p3"><span class="s5"><span class="Apple-converted-space">    </span>&lt;</span><span class="s2">meta</span><span class="s5"> </span><span class="s3">rel</span><span class="s5">=</span>"ar"<span class="s5"> </span><span class="s3">href</span><span class="s5">=</span>"ANTOHA1.usdz"<span class="s5">&gt;</span></p>
+<p class="p2"><span class="Apple-converted-space">    </span>&lt;<span class="s2">title</span>&gt;View in AR&lt;/<span class="s2">title</span>&gt;</p>
 <p class="p2"><span class="Apple-converted-space">  </span>&lt;/<span class="s2">head</span>&gt;</p>
 <p class="p2"><span class="Apple-converted-space">  </span>&lt;<span class="s2">body</span>&gt;</p>
 <p class="p3"><span class="s5"><span class="Apple-converted-space">    </span>&lt;</span><span class="s2">a</span><span class="s5"> </span><span class="s3">rel</span><span class="s5">=</span>"ar"<span class="s5"> </span><span class="s3">href</span><span class="s5">=</span>"ANTOHA1.usdz"<span class="s5">&gt;</span></p>
