--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANTOH1 AR Model</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <!-- Мета-тег для AR Quick Look -->
+  <link rel="ar" href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz">
 </head>
 <body>
-  <!-- Ссылка для AR Quick Look -->
-  <a href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz" rel="ar" data-arlink="true">
-    Открыть в AR
-  </a>
+  <!-- Это не нужно будет нажимать. Страница сразу будет запускать AR на iPhone -->
 </body>
 </html>
