--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANTOH1 AR Model</title>
-  <!-- Мета-тег для AR Quick Look -->
+  <!-- Мета-теги для AR Quick Look -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Мета-тег для ARKit -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <!-- Это указывает iOS, что это файл для AR Quick Look -->
   <link rel="apple-touch-icon" href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz">
 </head>
 <body>
+  <!-- Ссылка для AR Quick Look -->
+  <a href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz" rel="ar" target="_blank">
+    Открыть в AR
+  </a>
   <script>
-    if (window.matchMedia('(pointer: coarse)').matches) {
-      window.location.href = "https://pavlikbelike.github.io/ar/ANTOHA1.usdz";
-    } else {
+    if (navigator.userAgent.match(/(iPhone|iPod|iPad)/i)) {
       window.location.href = "https://pavlikbelike.github.io/ar/ANTOHA1.usdz";
     }
   </script>
