--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANTOH1 AR Model</title>
-
-  <!-- Мета-тег для AR Quick Look -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-  <!-- Мета-тег AR для Quick Look -->
-  <link rel="apple-touch-icon" href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz">
-  <link rel="apple-itunes-app" href="https://pavlikbelike.github.io/ar/ANTOHA1.usdz">
 </head>
 <body>
   <script>
-    // Пробуем редиректить на AR Quick Look на устройствах iOS
+    // Проверяем, если это устройство iOS
     if (navigator.userAgent.match(/(iPhone|iPod|iPad)/i)) {
+      // Автоматически направляем на файл .usdz
       window.location.href = "https://pavlikbelike.github.io/ar/ANTOHA1.usdz";
     }
   </script>
